--- a/public/css/landingpage.css
+++ b/public/css/landingpage.css
@@ -1,7 +1,8 @@
   @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');  
     
-  body {
+  body, html{
     font-family: 'Poppins', sans-serif;
+    scroll-behavior: smooth;
   }
 
   .green {
